@@ -30,6 +30,8 @@ parameters:
 - new parameter lp/randomseed to set the initial seed of the LP solver
 
 performance improvements:
+- changed value of parameter separating/clique/cliquedensity to 0.0 such that the separator always constructs a dense clique table
+  which proved to be faster on the benchmarks MMM and stableset.
 
 interface:
 - spx2 is the new default LP solver interface
